--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -60,64 +60,71 @@
         <% else %>
           <% current_user.slots.each do |slot| %>
             <% slot.bookings.each do |booking| %>
-            <div class="requests">
-
-              <% if booking.user.avatar.nil? %>
-                <%= image_tag "placeholder_pic.png", class: "avatar-large" %>
-              <% else %>
-                <%= image_tag booking.user.avatar, class: "avatar-large " %>
-              <% end %>
-              Dr <%= booking.user.first_name %> <%= booking.user.last_name %> <br>
-              <%= l(booking.start_date, format: "%e %B %Y")  %>
-              au <%= l(booking.end_date, format: "%e %B %Y")  %>
-              <br>
-              <%= link_to "Contacter", user_path(booking.user) %>
-              <br><br>
-              <% if booking.accepted.nil? %>
-                <%= simple_form_for(booking) do |f| %>
-                  <%= f.input :accepted, as: :hidden, input_html: { value: 'true' } %>
-                  <%= f.button :submit, "Accepter", method: :patch, :class => 'btn btn-primary btn-calendar btn-confirm' %>
-                <% end %><%= simple_form_for(booking) do |f| %>
-                  <%= f.input :accepted, as: :hidden, input_html: { value: 'false' } %>
-                  <%= f.button :submit, "Refuser", method: :patch, :class => 'btn btn-danger btn-calendar btn-confirm' %>
+              <div class="requests">
+                <% if booking.user.avatar.nil? %>
+                  <%= image_tag "placeholder_pic.png", class: "avatar-large" %>
+                <% else %>
+                  <%= image_tag booking.user.avatar, class: "avatar-large " %>
                 <% end %>
-              <% elsif booking.accepted == false %>
-                <strong>Remplacement refusé</strong>
-              <% else %>
-                <strong>Remplacement accepté !</strong>
-              <% end %>
-              <% if booking.accepted && booking.end_date <= Date.today %>
+                Dr <%= booking.user.first_name %> <%= booking.user.last_name %>
+                <br>
+                <%= l(booking.start_date, format: "%e %B %Y")  %> au <%= l(booking.end_date, format: "%e %B %Y")  %>
+                <br>
+                <%= link_to "Contacter", user_path(booking.user) %>
                 <br><br>
-                <button type="button" class="btn btn-info btn-calendar" data-toggle="modal" data-target="#myModal">
-                  Donnez votre avis
-                </button>
+                <% if booking.accepted.nil? %>
+                  <%= simple_form_for(booking) do |f| %>
+                    <%= f.input :accepted, as: :hidden, input_html: { value: 'true' } %>
+                    <%= f.button :submit, "Accepter", method: :patch, :class => 'btn btn-primary btn-calendar btn-confirm' %>
+                  <% end %><%= simple_form_for(booking) do |f| %>
+                    <%= f.input :accepted, as: :hidden, input_html: { value: 'false' } %>
+                    <%= f.button :submit, "Refuser", method: :patch, :class => 'btn btn-danger btn-calendar btn-confirm' %>
+                  <% end %>
+                <% elsif booking.accepted == false %>
+                  <strong>Remplacement refusé</strong>
+                <% else %>
+                  <strong>
+                    <% if booking.end_date > Date.today %><% raise %>
+                      Remplacement accepté !
+                    <% else %>
+                      Remplacement terminé
+                    <% end %>
+                  </strong>
+                <% end %>
+                <% if booking.accepted && booking.end_date <= Date.today && Review.where(booking_id: booking.id).size == 0 %>
 
-                <!-- Modal -->
-                <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-                  <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <h4 class="modal-title" id="myModalLabel">Donnez votre avis</h4>
-                      </div>
-                      <div class="modal-body">
-                        <%= simple_form_for([ booking.user, @review ]) do |f| %>
-                          <%= f.error_notification %>
+                  <br><br>
+                  <button type="button" class="btn btn-info btn-calendar" data-toggle="modal" data-target="#myModal">
+                    Donnez votre avis
+                  </button>
 
-                          <%= f.input :rating %>
-                          <%= f.input :content %>
+                  <!-- Modal -->
+                  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                    <div class="modal-dialog" role="document">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                          <h4 class="modal-title" id="myModalLabel">Donnez votre avis</h4>
+                        </div>
+                        <div class="modal-body">
+                          <%= simple_form_for([ booking.user, @review ]) do |f| %>
+                            <%= f.error_notification %>
 
-                      </div>
-                      <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
-                        <%= f.button :submit, "Valider", class: "btn btn-primary" %>
-                        <% end %>
+                            <%= f.input :rating %>
+                            <%= f.input :content %>
+                            <%= f.input :booking_id, as: :hidden, input_html: { value: booking.id } %>
+
+                        </div>
+                        <div class="modal-footer">
+                          <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
+                          <%= f.button :submit, "Valider", class: "btn btn-primary" %>
+                          <% end %>
+                        </div>
                       </div>
                     </div>
                   </div>
-                </div>
-              <% end %>
-            </div>
+                <% end %>
+              </div>
             <% end %>
           <% end %>
         <% end %>
@@ -148,7 +155,13 @@
                 <% elsif booking.accepted == false %>
                   <strong>Remplacement refusé</strong>
                 <% else %>
-                  <strong>Remplacement accepté !</strong>
+                  <strong>
+                    <% if booking.end_date > Date.today %>
+                      Remplacement accepté !
+                    <% else %>
+                      Remplacement terminé
+                    <% end %>
+                  </strong>
                 <% end %>
               </div>
               <br>
