--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -104,8 +104,8 @@
                         <%= simple_form_for([ booking.user, @review ]) do |f| %>
                           <%= f.error_notification %>
 
-                          <%= f.input :rating %>
-                          <%= f.input :content %>
+                          <%= f.input :rating, label: "Nombre d'étoiles" %>
+                          <%= f.input :content, label: "Commentaire" %>
 
                       </div>
                       <div class="modal-footer">
