--- a/app/assets/stylesheets/pages/_calendar.scss
+++ b/app/assets/stylesheets/pages/_calendar.scss
@@ -61,9 +61,41 @@
   margin: 20px;
   min-height: 130px;
 }
+.request-head {
+  display: flex;
+  align-items: center;
+}
+.request-head img {
+  flex: 0 0 20%;
+  width: 60px;
+}
+.request-header-info {
+  flex: 0 0 80%;
+  text-align: left;
+  margin-left: 10px;
+  p {
+    margin-bottom: 0;
+    font-size: 13px;
+  }
+}
+.request-dr-name {
+  color: $blue;
+  font-weight: bold;
+}
+.request-contact {
+
+}
+.request-buttons {
+
+}
+
+
+
+
+
 .btn-calendar {
   font-size: 13px;
-  margin-bottom: 10px;
+  margin: 10px;
 }
 .btn-confirm {
   width: 80px;
