--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -61,62 +61,71 @@
           <% current_user.slots.each do |slot| %>
             <% slot.bookings.each do |booking| %>
             <div class="requests">
-
-              <% if booking.user.avatar.nil? %>
-                <%= image_tag "placeholder_pic.png", class: "avatar-large" %>
-              <% else %>
-                <%= image_tag booking.user.avatar, class: "avatar-large " %>
-              <% end %>
-              Dr <%= booking.user.first_name %> <%= booking.user.last_name %> <br>
-              <%= l(booking.start_date, format: "%e %B %Y")  %>
-              au <%= l(booking.end_date, format: "%e %B %Y")  %>
-              <br>
-              <%= link_to "Contacter", user_path(booking.user) %>
-              <br><br>
-              <% if booking.accepted.nil? %>
-                <%= simple_form_for(booking) do |f| %>
-                  <%= f.input :accepted, as: :hidden, input_html: { value: 'true' } %>
-                  <%= f.button :submit, "Accepter", method: :patch, :class => 'btn btn-primary btn-calendar btn-confirm' %>
-                <% end %><%= simple_form_for(booking) do |f| %>
-                  <%= f.input :accepted, as: :hidden, input_html: { value: 'false' } %>
-                  <%= f.button :submit, "Refuser", method: :patch, :class => 'btn btn-danger btn-calendar btn-confirm' %>
+              <div class="request-head">
+                <% if booking.user.avatar.nil? %>
+                  <%= image_tag "placeholder_pic.png", class: "avatar-large" %>
+                <% else %>
+                  <%= image_tag booking.user.avatar, class: "avatar-large " %>
                 <% end %>
-              <% elsif booking.accepted == false %>
-                <strong>Remplacement refusé</strong>
-              <% else %>
-                <strong>Remplacement accepté !</strong>
-              <% end %>
-              <% if booking.accepted && booking.end_date <= Date.today %>
-                <br><br>
-                <button type="button" class="btn btn-info btn-calendar" data-toggle="modal" data-target="#myModal">
-                  Donnez votre avis
-                </button>
+                <div class="request-header-info">
+                  <%= link_to user_path(booking.user) do %>
+                    <p class="request-dr-name">Dr <%= booking.user.first_name %> <%= booking.user.last_name %></p>
+                  <% end %>
+                  <p>Du <%= l(booking.start_date, format: "%e %B %Y")  %></p>
+                  <p>Au <%= l(booking.end_date, format: "%e %B %Y")  %></p>
+                </div>
+              </div>
+              <hr>
+              <div class="request-contact">
+                <%= link_to "Contacter", user_path(booking.user) %>
+              </div>
+              <hr>
+              <div class="request-buttons">
+                <% if booking.accepted.nil? %>
+                  <%= simple_form_for(booking) do |f| %>
+                    <%= f.input :accepted, as: :hidden, input_html: { value: 'true' } %>
+                    <%= f.button :submit, "Accepter", method: :patch, :class => 'btn btn-primary btn-calendar btn-confirm' %>
+                  <% end %><%= simple_form_for(booking) do |f| %>
+                    <%= f.input :accepted, as: :hidden, input_html: { value: 'false' } %>
+                    <%= f.button :submit, "Refuser", method: :patch, :class => 'btn btn-danger btn-calendar btn-confirm' %>
+                  <% end %>
+                <% elsif booking.accepted == false %>
+                  <strong>Remplacement refusé</strong>
+                <% else %>
+                  <strong>Remplacement accepté !</strong>
+                <% end %>
+                <% if booking.accepted && booking.end_date <= Date.today %>
+                  <button type="button" class="btn btn-info btn-calendar" data-toggle="modal" data-target="#myModal">
+                    Donnez votre avis
+                  </button>
 
-                <!-- Modal -->
-                <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-                  <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <h4 class="modal-title" id="myModalLabel">Donnez votre avis</h4>
-                      </div>
-                      <div class="modal-body">
-                        <%= simple_form_for([ booking.user, @review ]) do |f| %>
-                          <%= f.error_notification %>
+                  <!-- Modal -->
+                  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                    <div class="modal-dialog" role="document">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                          <h4 class="modal-title" id="myModalLabel">Donnez votre avis</h4>
+                        </div>
+                        <div class="modal-body">
+                          <%= simple_form_for([ booking.user, @review ]) do |f| %>
+                            <%= f.error_notification %>
 
-                          <%= f.input :rating, label: "Nombre d'étoiles", collection: [1,2,3,4,5] %>
-                          <%= f.input :content, label: "Commentaire" %>
+                            <%= f.input :rating, label: "Nombre d'étoiles", collection: [1,2,3,4,5] %>
+                            <%= f.input :content, label: "Commentaire" %>
 
-                      </div>
-                      <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
-                        <%= f.button :submit, "Valider", class: "btn btn-primary" %>
-                        <% end %>
+                        </div>
+                        <div class="modal-footer">
+                          <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
+                          <%= f.button :submit, "Valider", class: "btn btn-primary" %>
+                          <% end %>
+                        </div>
                       </div>
                     </div>
                   </div>
-                </div>
-              <% end %>
+
+                <% end %>
+              </div>
             </div>
             <% end %>
           <% end %>
@@ -181,6 +190,7 @@
                     </div>
                   </div>
                 </div>
+
               <% end %>
           </div>
             <% end %>
