--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -84,21 +84,20 @@
                 <% if booking.accepted.nil? %>
                   <%= simple_form_for(booking) do |f| %>
                     <%= f.input :accepted, as: :hidden, input_html: { value: 'true' } %>
-                    <%= f.button :submit, "Accepter", method: :patch, :class => 'btn btn-primary btn-calendar btn-confirm' %>
+                    <%= f.button :submit, "Accepter", method: :patch, :class => 'btn btn-primary btn-calendar btn-confirm', style: "width: 100%;" %>
                   <% end %><%= simple_form_for(booking) do |f| %>
                     <%= f.input :accepted, as: :hidden, input_html: { value: 'false' } %>
-                    <%= f.button :submit, "Refuser", method: :patch, :class => 'btn btn-danger btn-calendar btn-confirm' %>
+                    <%= f.button :submit, "Refuser", method: :patch, :class => 'btn btn-danger btn-calendar btn-confirm', style: "width: 100%;" %>
                   <% end %>
                 <% elsif booking.accepted == false %>
                   <strong>Remplacement refusé</strong>
+                <% elsif booking.accepted && booking.end_date <= Date.today %>
+                  <strong>Remplacement accepté</strong>
                 <% else %>
-                  <strong>Remplacement accepté !</strong>
-                <% end %>
-                <% if booking.accepted && booking.end_date <= Date.today %>
+                  <strong>Remplacement terminé</strong>
                   <button type="button" class="btn btn-info btn-calendar" data-toggle="modal" data-target="#myModal">
                     Donnez votre avis
                   </button>
-
                   <!-- Modal -->
                   <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                     <div class="modal-dialog" role="document">
@@ -123,7 +122,6 @@
                       </div>
                     </div>
                   </div>
-
                 <% end %>
               </div>
             </div>
@@ -142,60 +140,67 @@
             <p> Vous n'avez pas encore fait de demande !</p>
           <% else %>
             <% current_user.bookings.each do |booking| %>
-          <div class="requests">
-            <% if booking.slot.user.avatar.nil? %>
-              <%= image_tag "placeholder_pic.png", class: "avatar-large" %>
-            <% else %>
-              <%= image_tag booking.slot.user.avatar, class: "avatar-large " %>
-            <% end %>
-            Dr <%= booking.slot.user.first_name %> <%= booking.slot.user.last_name %><br>
-              <%= l(booking.start_date, format: "%e %B %Y") %>
-              au <%= l(booking.end_date, format: "%e %B %Y") %> <br><br>
-              <div class="status">
-                <% if booking.accepted.nil? %>
-                  <em>Demande en attente</em>
-                <% elsif booking.accepted == false %>
-                  <strong>Remplacement refusé</strong>
-                <% else %>
-                  <strong>Remplacement accepté !</strong>
-                <% end %>
-              </div>
-              <br>
-              <% if booking.accepted && booking.end_date <= Date.today %>
-                <button type="button" class="btn btn-info btn-calendar" data-toggle="modal" data-target="#myModal">
-                  Donnez votre avis
-                </button>
-
-                <!-- Modal -->
-                <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-                  <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <h4 class="modal-title" id="myModalLabel">Donnez votre avis</h4>
-                      </div>
-                      <div class="modal-body">
-                        <%= simple_form_for([ booking.slot.user, @review ]) do |f| %>
-                          <%= f.error_notification %>
-
-                          <%= f.input :rating, label: "Nombre d'étoiles", collection: [1,2,3,4,5] %>
-                          <%= f.input :content, label: "Commentaire" %>
-
-                      </div>
-                      <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
-                        <%= f.button :submit, "Valider", class: "btn btn-primary" %>
-                        <% end %>
-                      </div>
-                    </div>
+              <div class="requests">
+                <div class="request-head">
+                  <% if booking.slot.user.avatar.nil? %>
+                    <%= image_tag "placeholder_pic.png", class: "avatar-large" %>
+                  <% else %>
+                    <%= image_tag booking.slot.user.avatar, class: "avatar-large " %>
+                  <% end %>
+                  <div class="request-header-info">
+                    <%= link_to user_path(booking.slot.user) do %>
+                      <p class="request-dr-name">Dr <%= booking.slot.user.first_name %> <%= booking.slot.user.last_name %></p>
+                    <% end %>
+                    <p>Du <%= l(booking.start_date, format: "%e %B %Y")  %></p>
+                    <p>Au <%= l(booking.end_date, format: "%e %B %Y")  %></p>
                   </div>
                 </div>
+                <hr>
+                <div class="request-contact">
+                  <%= link_to "Contacter", user_path(booking.user) %>
+                </div>
+                <hr>
+                <div class="request-buttons">
+                  <% if booking.accepted.nil? %>
+                    <em>Demande en attente</em>
+                  <% elsif booking.accepted == false %>
+                    <strong>Remplacement refusé</strong>
+                  <% elsif booking.accepted && booking.end_date <= Date.today %>
+                    <strong>Remplacement accepté</strong>
+                  <% else %>
+                    <strong>Remplacement terminé</strong>
+                    <button type="button" class="btn btn-info btn-calendar" data-toggle="modal" data-target="#myModal">
+                      Donnez votre avis
+                    </button>
+                    <!-- Modal -->
+                    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                      <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                            <h4 class="modal-title" id="myModalLabel">Donnez votre avis</h4>
+                          </div>
+                          <div class="modal-body">
+                            <%= simple_form_for([ booking.user, @review ]) do |f| %>
+                              <%= f.error_notification %>
 
-              <% end %>
-          </div>
+                              <%= f.input :rating, label: "Nombre d'étoiles", collection: [1,2,3,4,5] %>
+                              <%= f.input :content, label: "Commentaire" %>
+
+                          </div>
+                          <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
+                            <%= f.button :submit, "Valider", class: "btn btn-primary" %>
+                            <% end %>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  <% end %>
+                </div>
+              </div>
             <% end %>
           <% end %>
-
       </div>
     </div>
   </div>
