--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -119,7 +119,7 @@
       </div>
       <div class="carousel-card text-center col-xs-12">
         <%= image_tag 'home_doc_1.jpg', class: "avatar-larger" %>
-        <h4>Dr Gibaud Laurent | Les Sables d'Olonnes</h4>
+        <h4>Dr Gibaud Laurent | Les Sables d'Olonne</h4>
         <div class="description text-justify">
           <p>"Auparavant, trouver un remplaçant de dernière minute était une mission quasi-impossible, mais ca, c'était avant."</p>
         </div>
